<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_category"
    style="@style/DefaultCardView.Rect"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/entry_recommended"
            style="@style/CategoryCaption.Small"
            android:drawableTop="@drawable/ic_face_unlock_primary_24dp"
            android:text="@string/entry_recommended" />


        <TextView
            android:id="@+id/entry_free"
            style="@style/CategoryCaption.Small"
            android:drawableTop="@drawable/ic_cellphone_android_primary_24dp"
            android:text="@string/entry_free" />

        <TextView
            android:id="@+id/entry_category"
            style="@style/CategoryCaption.Small"
            android:drawableTop="@drawable/ic_view_list_primary_24dp"
            android:text="@string/entry_category" />
    </LinearLayout>


</android.support.v7.widget.CardView>