<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:id="@+id/navigation_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="false"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backdrop_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/anchor"
            android:foreground="@color/backdrop_scrim"
            android:scaleType="centerCrop"
            tools:src="@drawable/backdrop_2"/>

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_avatar_placeholder"/>

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/avatar"
            android:layout_marginLeft="@dimen/general_content_space"
            android:layout_toRightOf="@+id/avatar"
            android:text="未登录"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_menu"/>

        <Space
            android:id="@+id/anchor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar"/>
    </RelativeLayout>

    <View style="@style/DrawerMenuDivider"/>

    <TextView
        android:id="@+id/drawer_menu_category"
        style="@style/DrawerMenuText"
        android:drawableLeft="@drawable/ic_tag_multiple_grey600_24dp"
        android:text="@string/drawer_menu_category"/>

    <TextView
        android:id="@+id/drawer_menu_want"
        style="@style/DrawerMenuText"
        android:drawableLeft="@drawable/ic_receipt_grey600_24dp"
        android:text="@string/drawer_menu_want"/>

    <TextView
        android:id="@+id/drawer_menu_message"
        style="@style/DrawerMenuText"
        android:drawableLeft="@drawable/ic_message_text_grey600_24dp"
        android:text="@string/drawer_menu_message"/>

    <TextView
        android:id="@+id/drawer_menu_account"
        style="@style/DrawerMenuText"
        android:drawableLeft="@drawable/ic_account_grey600_24dp"
        android:text="@string/drawer_menu_account"/>

    <View style="@style/DrawerMenuDivider"/>

    <TextView
        android:id="@+id/drawer_menu_settings"
        style="@style/DrawerMenuText"
        android:drawableLeft="@drawable/ic_settings_grey600_24dp"
        android:text="@string/drawer_menu_settings"/>
</LinearLayout>
