<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    style="@style/DefaultCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/DefaultAppBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/BaseToolbar.Light"
            app:navigationIcon="@drawable/ic_arrow_back_primary_24dp"
            app:title="@string/activity_sign_in"/>

        <include layout="@layout/toolbar_shadow_compat"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp"
        android:paddingLeft="56dp"
        android:paddingRight="56dp"
        android:paddingTop="32dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_name_input_area"
                style="@style/DefaultInputTextLayout"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/user_name_et"
                    style="@style/DefaultEditText.SingleLine"
                    android:drawableLeft="@drawable/ic_cellphone_android_accent_24dp"
                    android:drawableStart="@drawable/ic_cellphone_android_accent_24dp"
                    android:hint="@string/hint_input_user_name"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input_area"
                style="@style/DefaultInputTextLayout">

                <EditText
                    android:id="@+id/password_et"
                    style="@style/DefaultEditText.SingleLine"
                    android:drawableLeft="@drawable/ic_key_variant_accent_24dp"
                    android:drawableStart="@drawable/ic_key_variant_accent_24dp"
                    android:hint="@string/hint_input_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="登录"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forget_psw_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/general_content_space"
                android:layout_marginTop="@dimen/general_content_space"
                android:text="@string/hint_forget_password"
                android:textColor="@color/grey_600"
                android:textSize="@dimen/material_text_caption1"/>

            <Button
                android:id="@+id/login_btn"
                style="@style/CustomBackgroundButton.Fill"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_rect_fill_grey"
                android:text="@string/action_login"/>

            <TextView
                android:id="@+id/access_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableLeft="@drawable/ic_wechat_grey600_24dp"
                android:drawablePadding="@dimen/general_content_space"
                android:drawableStart="@drawable/ic_wechat_grey600_24dp"
                android:gravity="center_vertical"
                android:text="@string/hint_continue_with_wechat"
                android:textColor="@color/grey_600"
                android:textSize="@dimen/material_text_caption1"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
